Changed everything to jdk20 and resolved the failing test case for sint8, uint8 by doing this.